# devkitpro-gba-cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  cook-assets.sh
include/: main.h
src/: main.c
